--- a/src/main/metadata/pages/VehiclePicker.page
+++ b/src/main/metadata/pages/VehiclePicker.page
@@ -458,8 +458,7 @@
                                     
                            };
                            testGetFocusedSubtabId();
-                       }else{ 
-                       /{!currentRecordId}                      
+                       }else{
                            window.top.location="/{!currentRecordId}";
                        }                            
               });
@@ -666,6 +665,14 @@
           
     }]);        
     </script>
+     <script type="text/javascript">
+        function Disablebuttons(){
+            var obj= document.getElementById('cmdSave')
+            var obj2= document.getElementById('cmdSave2')
+            obj.style.visibility = 'hidden';
+            obj2.style.visibility = 'hidden';
+        }
+</script>
     <div id="ng-app" ng-app="VehiclePickerApp" ng-controller="VehiclePickerController">
     <table>
     <tr>
@@ -673,13 +680,13 @@
     <!-------------- INTERESTED VEHICLE SECTION ----------------->
     <td style="vertical-align: top;">{!$label.Vehicle_Picker_Interested}&nbsp;</td>
     <td>
-        <input type="text" ng-model="interestedVehicleDetails"  disabled="disabled" style="width:300px" />
-        <apex:outputPanel rendered="{!disableButtons}"> 
-            &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'Edit'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses)"  class="btn" value="{!$label.New_Button}" />
-            &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'New' || interestedRecType != 'Vehicle Product'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses)" class="btn" value="{!$Label.Edit}"/>
-            &nbsp;<input type="button" ng-click="clearVehicle('Interested Vehicle')" class="btn" value="{!$label.Clear_Button}"/> 
-            &nbsp;<!--<input type="button" ng-disabled="{{lead_Type != 'Used Car'|| interestedVehicleDetails != ''}}" ng-click="showList('Interested Vehicle')" class="btn" value="{!$label.Lookup_Button}"/>-->
-         </apex:outputPanel> 
+        <input type="text" ng-model="interestedVehicleDetails"  disabled="disabled" style="width:300px" /> 
+        <apex:outputPanel rendered="{!disableButtons}">
+        &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'Edit'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses);" onclick="KillSaveButton();" class="btn" value="{!$label.New_Button}" id="cmdSave"/>
+        &nbsp;<input type="button" ng-disabled="{{vehicleDetailText == 'New' || interestedRecType != 'Vehicle Product'}}" ng-click="showDetail('Interested Vehicle',selectedBrand,selectedClasses)" class="btn" value="{!$Label.Edit}"/>
+        &nbsp;<input type="button" ng-click="clearVehicle('Interested Vehicle')" class="btn" value="{!$label.Clear_Button}"/>
+        &nbsp;<!--<input type="button" ng-disabled="{{lead_Type != 'Used Car'|| interestedVehicleDetails != ''}}" ng-click="showList('Interested Vehicle')" class="btn" value="{!$label.Lookup_Button}"/>-->
+        </apex:outputPanel>
         <!----------------- DISPLAY INTERESTED VEHICLE DETAILS ---------------->
         <div ng-if="vehicleDetail" style="background-color:#efefef;width:500px"> 
             <br/>
@@ -725,8 +732,8 @@
         <!------------ COMPETITOR VEHICLE SECTION --------->
         <td style="vertical-align: top;">
         {!$label.Vehicle_Picker_Competitor}&nbsp;</td>
-        <td><input type="text" ng-model="competitorVehicleDetails"  disabled="disabled" style="width:300px" /> 
-        <apex:outputPanel rendered="{!disableButtons}">
+        <td><input type="text" ng-model="competitorVehicleDetails"  disabled="disabled" style="width:300px" />
+        <apex:outputPanel rendered="{!disableButtons}"> 
         &nbsp;<input type="button" ng-disabled="{{vehicleDetailCompetitorText == 'Edit'}}" ng-click="showDetail('Competitor Vehicle',selectedCompetitorBrand,selectedCompetitorClasses)"  class="btn" value="{!$label.New_Button}"/>
         &nbsp;<input type="button" ng-disabled="{{vehicleDetailCompetitorText == 'New' || competitorRecType != 'Vehicle Product'}}" ng-click="showDetail('Competitor Vehicle',selectedCompetitorBrand,selectedCompetitorClasses)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('Competitor Vehicle')" class="btn" value="{!$label.Clear_Button}"/> 
@@ -765,7 +772,7 @@
         <td style="vertical-align: top;padding=20px">
         {!$label.Vehicle_Picker_Current1}&nbsp;</td>
         <td><input type="text" ng-model="CurrentVehicle1Details"  disabled="disabled" style="width:300px" /> 
-        <apex:outputPanel rendered="{!disableButtons}">
+        <apex:outputPanel rendered="{!disableButtons}"> 
         &nbsp;<input type="button" ng-disabled="{{vehicleCurrent1DetailText == 'Edit'}}" ng-click="showDetail('CurrentVehicle1',selectedCurrent1Brand,selectedCurrent1Classes)"  class="btn" value="{!$label.New_Button}"/>
         &nbsp;<input type="button" ng-disabled="{{vehicleCurrent1DetailText == 'New' || c1_RecType != 'Vehicle Product'}}" ng-click="showDetail('CurrentVehicle1',selectedCurrent1Brand,selectedCurrent1Classes)" class="btn" value="{!$Label.Edit}"/>
         &nbsp;<input type="button" ng-click="clearVehicle('CurrentVehicle1')" class="btn" value="{!$label.Clear_Button}"/> 
